# Hippocampus

./: .gitignore  DEVLOG.md  LICENSE  README.md  README_CN.md  config.yml  pyproject.toml
examples/: agent_demo.py
hippocampus/: __init__.py  cli.py  compressor.py  config.py  deps.py  installer.py  memory.py  store.py  tracer.py  utils.py
hippocampus/layers/: __init__.py  long_term.py  short_term.py  tfidf_backend.py  working.py
hippocampus/memory/: __init__.py  base.py  long_term.py  short_term.py  working.py
hippocampus/storage/: __init__.py  vector_store.py
tests/: test_basic.py  test_v04_multi_agent.py
