[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hippocampus-memory"
version = "0.1.0"
description = "A bionic memory system for AI — layered architecture with vector retrieval"
authors = [{name = "小狐 (VixieTodd)"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "chromadb>=0.4.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
hippo = "hippocampus.cli:main"

[project.urls]
Repository = "https://github.com/VixieTodd/Hippocampus"
